syntax = "proto3";

package thumbnail;

option go_package = "/proto;proto";

service ThumbnailService {
  rpc GetThumbnail (ThumbnailRequest) returns (ThumbnailResponse);
}

message ThumbnailRequest {
  string video_url = 1;
}

message ThumbnailResponse {
  bytes image_data = 1;
}
